# egglog-tutorial

./: 01-basics.egg  01-basics.html  02-datalog.egg  02-datalog.html  03-analysis.egg  03-analysis.html  04-scheduling.egg  04-scheduling.html  05-cost-model-and-extraction.egg  05-cost-model-and-extraction.html  06-case-study.egg  06-case-study.html  README.md  convert_tutorials.py  index.html
case-study-linear-algebra-compiler/: Cargo.toml  generate_optimized.sh
case-study-linear-algebra-compiler/examples/: deep.la  deep.la.optimized  test_variant.la.optimized
case-study-linear-algebra-compiler/src/: ast.rs  main.rs  util.rs
linear-algebra-compiler/: generate_optimized.sh
linear-algebra-compiler/examples/: test.la.optimized  test.optimized.la
linear-algebra-compiler/src/: defn.egg  main.rs
